# axum-everyday

./: Cargo.toml
src/: lib.rs  main.rs
src/routes/: hello.rs  middleware_message.rs  mirror_body_json.rs  mod.rs  path_variable.rs  query_params.rs  user_agent.rs
